Update ControllerManagePage.java